<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mdp_android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bluetooth"
        android:name="com.example.mdp_android.ui.bluetooth.BluetoothFragment"
        android:label="@string/title_bluetooth"
        tools:layout="@layout/fragment_bluetooth" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.mdp_android.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />
</navigation>