<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/robot"
                >

                <TextView
                    android:id="@+id/textView_robotStatusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="15dp"
                    android:text="@string/text_robotStatusTitle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_robotStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="15dp"
                    android:text="@string/text_robotStart"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/target" >

                <TextView
                    android:id="@+id/textView_targetCoorTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="15dp"
                    android:text="@string/text_targetCoorTitle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_targetCoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/urbanist_semibold"
                    android:padding="15dp"
                    android:text="@string/text_targetCoor"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.example.mdp_android.ui.grid.Map
                android:id="@+id/mapView"
                android:layout_width="450dp"
                android:layout_height="450dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/button_background_color_red"
                    android:fontFamily="@font/urbanist_semibold"
                    android:text="@string/text_reset" />

                <Spinner
                    android:id="@+id/spinner_load_preset"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:background="@drawable/spinner_background"
                    android:fontFamily="@font/urbanist_semibold"
                    android:popupBackground="@color/preset" />

                <TextView
                    android:id="@+id/textView_obstacleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/urbanist_semibold"
                    android:text="@string/text_obstacleTitle"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_obsList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>

                <ToggleButton
                    android:id="@+id/button_startpoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/urbanist_semibold"
                    android:background="@drawable/button_background"
                    android:textOff="@string/text_robotStartPoint"
                    android:textColor="@color/black" 
                    android:textOn="Cancel" />

                <ToggleButton
                    android:id="@+id/button_setDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/urbanist_semibold"
                    android:textOff="@string/text_setDirection"
                    android:background="@drawable/button_background"
                    android:textColor="@color/black"
                    android:textOn="Cancel" />

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">


            <Button
                android:id="@+id/button_start"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/urbanist_semibold"
                android:padding="10dp"
                android:text="@string/button_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView_taskType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/text_taskType"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/button_taskType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.087"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_bluetooth"
                app:layout_constraintVertical_bias="0.94" />

            <ToggleButton
                android:id="@+id/button_taskType"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:fontFamily="@font/urbanist_semibold"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textOff="@string/button_imagerec"
                android:textOn="@string/button_fastest"
                android:background="@drawable/spinner_background"
                android:textColor="@color/task"
                app:layout_constraintBottom_toTopOf="@+id/button_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.919" />

            <ImageButton
                android:id="@+id/imageButton_down"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:background="#F2F3EE"
                android:src="@drawable/arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.808"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton_left"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:background="#F2F3EE"
                android:scaleType="centerCrop"
                android:src="@drawable/arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton_down"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.957"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton_right"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="#F2F3EE"
                android:scaleType="centerCrop"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.017"
                app:layout_constraintStart_toEndOf="@+id/imageButton_down"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.957"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton_up"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="#F2F3EE"
                android:scaleType="centerCrop"
                android:src="@drawable/arrow_up"
                app:layout_constraintBottom_toTopOf="@+id/imageButton_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.809"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.96"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/bluetooth_device_connected_not"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/button_taskType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04" />

            <TextView
                android:id="@+id/textView_StatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/text_StatusTitle"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.089"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_bluetooth" />

            <TextView
                android:id="@+id/textView_Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/text_Status"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView_StatusTitle"
                app:layout_constraintTop_toBottomOf="@+id/textView_bluetooth" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>