<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.messages.MessagesFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_received"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:text="@string/text_received"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <ImageButton
                            android:id="@+id/imageButton_copyReceived"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@color/message_utility_button_background"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:contentDescription="@string/button_copy"
                            android:src="@drawable/copy" />

                        <ImageButton
                            android:id="@+id/imageButton_clearReceived"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@color/message_utility_button_background"
                            android:layout_marginEnd="20dp"
                            android:contentDescription="@string/button_clear"
                            android:src="@drawable/bin" />

                    </LinearLayout>

                    <ListView
                        android:id="@+id/listview_received"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_sent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:text="@string/text_sent"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <ImageButton
                            android:id="@+id/imageButton_copySent"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@color/message_utility_button_background"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:contentDescription="@string/button_copy"
                            android:src="@drawable/copy" />

                        <ImageButton
                            android:id="@+id/imageButton_clearSent"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@color/message_utility_button_background"
                            android:layout_marginRight="20dp"
                            android:contentDescription="@string/button_clear"
                            android:src="@drawable/bin" />
                    </LinearLayout>

                    <ListView
                        android:id="@+id/listView_sent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <EditText
            android:id="@+id/editText_sendMessage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:hint="@string/text_hint"/>

        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_below="@+id/editText_sendMessage"
            android:text="@string/button_send" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>