<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.bluetooth.BluetoothFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp"
        android:paddingBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bluetooth_device_connected_not"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_scan"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:padding="10dp"
                android:text="@string/button_scan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPaired"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="20dp"
                        android:text="@string/text_paired"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <ListView
                        android:id="@+id/lvPaired"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tvAvailable"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="20dp"
                            android:layout_weight="1"
                            android:text="@string/text_available"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/progressAvailable"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:visibility="gone" />
                    </LinearLayout>

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <ListView
                        android:id="@+id/lvAvailable"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>